--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-flask==2.3.3
-flask-login==0.6.2
-flask-sqlalchemy==3.1.1
-gunicorn==23.0.0
-email-validator==2.1.0
-openpyxl==3.1.2
-pandas==2.1.2
-psycopg2-binary==2.9.9
-reportlab==4.0.7
-werkzeug==2.3.7
-sqlalchemy==2.0.22
-numpy==1.21.6
-opencv-python-headless==4.5.5.64
+flask>=2.0.0,<2.1.0
+flask-login>=0.6.0,<0.7.0
+flask-sqlalchemy>=3.0.0,<3.1.0
+gunicorn>=20.0.0
+email-validator>=1.1.0
+openpyxl>=3.0.0
+pandas>=1.3.0,<1.4.0
+psycopg2-binary>=2.9.0
+reportlab>=3.6.0
+werkzeug>=2.0.0,<2.1.0
+sqlalchemy>=1.4.0,<2.0.0
+numpy>=1.20.0,<1.21.0
+opencv-python-headless>=4.5.0,<4.6.0
 pyzbar
+routes
+trafilatura
