--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-flask>=2.0.0,<2.1.0
-flask-login>=0.6.0,<0.7.0
-flask-sqlalchemy>=3.0.0,<3.1.0
-gunicorn>=20.0.0
-email-validator>=1.1.0
-openpyxl>=3.0.0
-pandas>=1.3.0,<1.4.0
-psycopg2-binary>=2.9.0
-reportlab>=3.6.0
-werkzeug>=2.0.0,<2.1.0
-sqlalchemy>=1.4.0,<2.0.0
-numpy>=1.20.0,<1.21.0
-opencv-python-headless>=4.5.0,<4.6.0
-pyzbar
-routes
-trafilatura
+flask==2.2.5
+flask-login==0.6.2
+flask-sqlalchemy==3.0.5
+gunicorn==20.1.0
+email-validator==2.0.0
+openpyxl==3.0.10
+pandas==1.3.5
+psycopg2-binary==2.9.6
+reportlab==3.6.12
+werkzeug==2.2.3
+sqlalchemy==1.4.46
+numpy==1.21.5
+opencv-python-headless==4.5.5.64
+pyzbar==0.1.9
+routes==2.5.1
+trafilatura==1.6.0
